<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>

        <item
            android:id="@+id/nav_search"
            android:title="@string/search_text"
            android:icon="@drawable/search_icon"/>

        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/categories"
            android:icon="@drawable/category_icon"/>

        <item
            android:id="@+id/nav_add_missing_place"
            android:title="@string/add_missing_place"
            android:icon="@drawable/home_icon"/>




    </group>

    <item android:title="Profile">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/login_icon"/>

                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile_icon"/>

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout"/>




            </group>

        </menu>




    </item>

    <item android:title="Categories">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_restaurant"
                    android:title="@string/rest"
                    android:icon="@drawable/restaurant_icon"/>

                <item
                    android:id="@+id/nav_hotel"
                    android:title="@string/hotels"
                    android:icon="@drawable/hotel_icon"/>

                <item
                    android:id="@+id/nav_school"
                    android:title="@string/school"
                    android:icon="@drawable/education_icon"/>

                <item
                    android:id="@+id/nav_store"
                    android:title="@string/shop"
                    android:icon="@drawable/store_icon"/>


            </group>

        </menu>




    </item>

    <item android:title="Share">

        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/share_icon"/>

                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/rate_us"/>

            </group>

        </menu>




    </item>



</menu>